4.23正则表达式验证输入，Markdown渲染完成